# job_defense_shield

./: .flake8  .gitignore  404.html  README.md  base.py  cleaner.py  config.yaml  efficiency.py  email_translator.py  example.yaml  greeting.py  index.html  job_defense_shield.py  mkdocs.yml  pyproject.toml  raw_job_data.py  sitemap.xml  utils.py  workday.py
alert/: active_cpu_memory.py  cancel_zero_gpu_jobs.py  compute_efficiency.py  datascience.py  datascience_mem_hours.py  excess_cpu_memory.py  excessive_time_limits.py  fragmentation.py  gpu_fragmentation.py  gpu_model_too_powerful.py  hard_warning_cpu_memory.py  info.py  jobs_overview.py  longest_queued.py  mig.py  most_cores.py  most_gpus.py  multinode_cpu_fragmentation.py  multinode_gpu_fragmentation.py  recent_jobs_all_failures.py  serial_allocating_multiple_cores.py  serial_code_using_multiple_cores.py  too_many_cores_per_gpu.py  too_much_cpu_mem_per_gpu.py  unused_allocated_time.py  utilization_by_slurm_account.py  utilization_overview.py  xpu_efficiency.py  zero_cpu_utilization.py  zero_gpu_utilization.py  zero_util_gpu_hours.py
configuration/: index.html
contributions/: index.html
docs/: configuration.md  contributions.md  emails.md  extra.md  index.md  nodelist.md  setup.md  support.md
email/: cancel_gpu_jobs_scancel_3.txt  cancel_gpu_jobs_warning_1.txt  cancel_gpu_jobs_warning_2.txt  excess_cpu_memory.txt  excessive_time.txt  gpu_model_too_powerful.txt  low_cpu_efficiency.txt  low_gpu_efficiency.txt  mig.txt  multinode_cpu_fragmentation.txt  multinode_gpu_fragmentation.txt  serial_allocating_multiple.txt  serial_using_multiple.txt  too_many_cores_per_gpu.txt  too_much_cpu_mem_per_gpu.txt  too_much_cpu_mem_per_gpu_2.txt  zero_cpu_utilization.txt  zero_util_gpu_hours.txt
emails/: index.html
nodelist/: index.html
publications/: index.html
search/: search_index.json
setup/: index.html
support/: index.html
(+44 files in other folders)
