[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job defense shield"
version = "0.1.0"
authors = [
  { name="Jonathan D. Halverson", email="halverson@princeton.edu" },
]
description = "Automated Slurm job alerts for underutilization"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.18",
  "pandas",
  "requests",
  "blessed",
]


[project.optional-dependencies]
test = ["pytest>=6"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "tests",
]
