[project]
name = "job defense shield"
version = "0.1.0"
authors = [
  { name="Jonathan D. Halverson", email="halverson@princeton.edu" },
]
description = "Automated Slurm job alerts for underutilization"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "pandas",
]
license = "GPL-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2.0",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/PrincetonUniversity/job_defense_shield"
repository = "https://github.com/PrincetonUniversity/job_defense_shield"
keywords = ["slurm", "jobstats", "job monitoring", "email alerts"]


[project.optional-dependencies]
test = ["pytest>=6"]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "tests",
]
